src/views/place/Place.scss
.place-image{
    width:80vw;
    
    max-width: 500px;
    max-height: 500px;
    border-radius: 4px;
}
.a-map{
    text-decoration: none;
}

.place-container{
    /* margin-top: 70px !important;*/
}

.texts{
    word-break: break-all;
    padding: 0px 20px;
}

.place-look{
    margin-top: 20px !important;
}

.place{
    text-align: center;
}

